--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+        <title>{% block title %}Bucket List!{% endblock %}</title>
         {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
+            <link rel="stylesheet" href="{{ asset('style/bucket.css') }}">
         {% endblock %}
-
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
+        <link href="{{ asset('media/favicon.ico') }}" rel="shortcut icon">
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <header>
+            <img src="{{ asset('media/logo.svg') }}" alt="">
+            <h1>Bucket-List</h1>
+        </header>
+        <nav>
+            <ul>
+                <li><a href="{{ path('app_main_index') }}">Home</a></li>
+            </ul>
+        </nav>
+        <main>{% block main %}{% endblock %}</main>
+        {% block javascripts %}{% endblock %}
+        <footer>
+            &copy;Bucket-List {{ date() | date('Y') }}
+        </footer>
     </body>
 </html>
