--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,6 +16,8 @@
         <nav>
             <ul>
                 <li><a href="{{ path('app_main_index') }}">Home</a></li>
+                <li><a href="{{ path('app_main_aboutus') }}">About us...</a></li>
+                <li><a href="{{ path('app_wish_list') }}">Wishes list</a></li>
             </ul>
         </nav>
         <main>{% block main %}{% endblock %}</main>
