--- a/templates/wish/list.html.twig
+++ b/templates/wish/list.html.twig
@@ -4,4 +4,9 @@
 
 {% block main %}
     <h1>Wishes List</h1>
+    <ul>
+        {% for w in wishes %}
+            <li><a href="{{ path('app_wish_details', {'id':w.id}) }}">{{ w.title }}</a></li>
+        {% endfor %}
+    </ul>
 {% endblock %}
