TP Pagination et CRUD sur Category

--- a/templates/wish/details.html.twig
+++ b/templates/wish/details.html.twig
@@ -2,6 +2,7 @@
 
 {% block main %}
     <h1>{{ wish.title }}</h1>
+    <i>{{ wish.category.name }}</i>
     {% if wish.description %}
         <p>{{ wish.description }}</p>
     {% endif %}
