--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,9 +18,18 @@
                 <li><a href="{{ path('app_main_index') }}">Home</a></li>
                 <li><a href="{{ path('app_main_aboutus') }}">About us...</a></li>
                 <li><a href="{{ path('app_wish_list') }}">Wishes list</a></li>
-                <li><a href="{{ path('app_wish_add') }}">Add a new wish</a></li>
+                {% if(app.user) %}
+                    <li><a href="{{ path('app_deconnection') }}">Logout</a></li>
+                    <li><a href="{{ path('app_wish_add') }}">Add a new wish</a></li>
+                {%  else %}
+                    <li><a href="{{ path('app_register') }}">Register</a></li>
+                    <li><a href="{{ path('app_connection') }}">Login</a></li>
+                {% endif %}
             </ul>
         </nav>
+        {% if(app.user) %}
+            <p>Hello {{ app.user.pseudo }}!</p>
+        {% endif %}
         {% for cat, messages in app.flashes %}
             {% for message in messages %}
                 <div>{{ cat }} : {{ message }}</div>
